<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安全卫士</string>
    <string name="hello_world">Hello world!</string>
    <string name="ex">1,2,3！！！1,2,3！！！1,2,3,这是跑马灯！！！！它终于跑起来啦！！</string>
    <string name="action_settings">Settings</string>
    <string name="sample_device_admin">sample_device_admin</string>
    <string name="sample_device_admin_description">sample_device_admin_description</string>
	<string name="shezhizhongxin">设置中心</string>
	<string name="shoujifangdao">手机防盗</string>
	<string name="shoujifangdaostup">您的手机防盗卫士：</string>
	<string name="simchange">SIM卡变更报警</string>
	<string name="gpsfollow">GPS追踪</string>
	<string name="remotedestroydata">远程销毁数据</string>
	<string name="remoteloc">远程锁屏</string>
	<string name="simbind">手机卡绑定</string>
	<string name="adoptSIMbind">通过绑定手机卡：</string>
	<string name="simbindc1">下次重启手机如果发现手机卡改变</string>
	<string name="simbindc2">就会发送报警短信</string>
	<string name="cliSIMbind">点击绑定SIM卡</string>
	<string name="simnobind">SIM卡没有绑定</string>
	<string name="simbinded">SIM卡已经绑定</string>
	<string name="setsafecodetitle">设置安全号码</string>
	<string name="simchanged">SIM卡变更后</string>
	<string name="sendsafeMessage">报警短信会发送给安全号码</string>
	<string name="setsafecode">请设置安全号码</string>
	<string name="selectpeople">选择联系人</string>
	<string name="conratutoin">恭喜您，设置完成</string>
	<string name="protectionoff">防盗保护没有开启</string>
	<string name="setPolicyManage">激活设备管理器</string>
	<string name="protectionon">防盗保护已经开启</string>
	<string name="setautoupdata">自动更新设置</string>
	<string name="autoupdataon">自动更新已开启</string>
	<string name="autoupdataoff">自动更新已关闭</string>
	<string name="banbenhao">版本号：1.0</string>
	<string name="downloadprogress">下载进度：</string>
	<string name="appmanger">应用管理</string>
	<string name="setpassword">设置密码</string>
	<string name="pinputpassword">请输入密码</string>
	<string name="inputpassword">输入密码</string>
	<string name="inputpasswordagain">请再次输入密码</string>
	<string name="functionlist">功能列表</string>
	<string name="miaoshu">0</string>
	<string name="yes">确定</string>
	<string name="cancel">取消</string>
	<string name="safecode">安全号码</string>
	<string name="safecodenum">1</string>
	<string name="protectiononoroff">防盗保护是否开启</string>
	<string name="reenterstup">重新进入设置向导</string>
	<string name="functionc">功能介绍</string>
	<string name="location">GPS追踪:#*location*#</string>
	<string name="alarmmusic">报警音乐:#*alarm*#</string>
	<string name="wipedata">远程删除数据:#*wipedata*#</string>
	<string name="lockscreen">远程锁屏:#*lockscreen*#</string>
	<string name="contactpeople">联系人</string>
	<string name="contactpeople1">小明同学</string>
	<string name="contactphone1">12345678945</string>
	
	
</resources>
