<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_stup3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/title_style"
        android:text="@string/setsafecodetitle" />

    <TextView
        style="@style/setup_title_style"
        android:text="@string/simchanged" />

    <TextView
        style="@style/stup_context_style"
        android:text="@string/sendsafeMessage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_setsafecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_rectangle_pading"
            android:hint="@string/setsafecode"
            android:inputType="phone" />

        <Button
            android:id="@+id/bt_selectpeople"
            android:layout_weight="1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/select_contact_change"
            android:onClick="selectpeople" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_contactoyes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_select_change"
        android:text="@string/yes"
        android:textSize="23sp" 
        android:onClick="yes"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/iv_setup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/miaoshu"
            android:src="@drawable/setup3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible"
                android:contentDescription="@string/miaoshu" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible"
                android:contentDescription="@string/miaoshu" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_online"
                android:contentDescription="@string/miaoshu" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/presence_invisible"
                android:contentDescription="@string/miaoshu" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>